--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-This is intended to be a starting point for CSS projects -- a sampling of techniques and tools I've found to work well together.
-
+Gesso -- the primer coat for a CSS project; more than a CSS Reset and less than a CSS Framework.
 
 
 Misc files:
